<resources>
    <string name="app_name">LoginSignUpWithOTP</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">NEXT</string>
    <string name="enter_the_otp">Enter the OTP \n we sent you on the following email:</string>
    <string name="didn_t_received_otp_resend_otp">Didn\'t received OTP? Resend OTP</string>
    <string name="done">DONE</string>
    <string name="logout">LOGOUT</string>
    <string name="preference_file_name">Welcome Preferences</string>
</resources>