<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity">

        <LinearLayout
            android:id="@+id/signUp_bg_layout"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/login_bg"
            android:orientation="horizontal">

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_alignBottom="@id/signUp_bg_layout"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="-400dp"
            app:cardCornerRadius="20dp">


            <LinearLayout
                android:id="@+id/loginScreen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtLabelSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:text="Sign Up"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="40dp"
                    android:background="#e0e0e0"
                    android:drawableStart="@drawable/user_icon"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:background="#e0e0e0"
                    android:drawableStart="@drawable/email_icon"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:background="#e0e0e0"
                    android:drawableLeft="@drawable/password_icon"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:background="#e0e0e0"
                    android:drawableStart="@drawable/password_icon"
                    android:hint="@string/confirm_password"
                    android:inputType="textVisiblePassword"
                    android:padding="10dp" />

                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="#1a237e"
                    android:text="@string/next"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txtAlreadyAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:text="Already have an account? Log In" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</layout>
