<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OtpActivity">

        <LinearLayout
            android:id="@+id/otp_layout"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/login_bg"
            android:orientation="horizontal">

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_alignBottom="@id/otp_layout"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="-400dp"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:id="@+id/loginScreen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgOtp"
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:src="@drawable/otp_image" />

                <TextView
                    android:id="@+id/txtEnterOtp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/enter_the_otp"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/showEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/otp1"
                        android:layout_width="40dp"
                        android:layout_height="45dp"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="1"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/otp2"
                        android:layout_width="40dp"
                        android:layout_height="45dp"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="1"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/otp3"
                        android:layout_width="40dp"
                        android:layout_height="45dp"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="1"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/otp4"
                        android:layout_width="40dp"
                        android:layout_height="45dp"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="1"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/otp5"
                        android:layout_width="40dp"
                        android:layout_height="45dp"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="1"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/otp6"
                        android:layout_width="40dp"
                        android:layout_height="45dp"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="1"
                        android:textColor="@color/black"
                        android:textStyle="bold" />


                </LinearLayout>

                <TextView
                    android:id="@+id/txtResendOtp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/didn_t_received_otp_resend_otp" />

                <Button
                    android:id="@+id/btnDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="#1a237e"
                    android:text="@string/done"
                    android:textColor="@color/white" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</layout>
